Agentforce/force-app/main/default/objects/Opportunity_Stage_History__c/Opportunity_Stage_History__c.object-meta.xml
<CustomObject>
    <label>Opportunity Stage History</label>
    <nameField>
        <displayFormat>OSH-{00000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Stage Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>