Agentforce/force-app/main/default/objects/Opportunity_Stage_History__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Days between Start and End Date. If no End Date is provided then the difference between Start Date and Today&apos;s Date. Populated by Flow Before Save Flow and Scheduled Flow.</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>