Agentforce/force-app/main/default/objects/Opportunity_Stage_History__c/fields/Forecast_Comments__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Comments__c</fullName>
    <label>Forecast Comments</label>
    <type>TextArea</type>
</CustomField>