Agentforce/force-app/main/default/objects/Opportunity_Stage_History__c/fields/Prior_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prior_Stage__c</fullName>
    <label>Prior Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>