Agentforce/force-app/main/default/objects/Opportunity_Stage_History__c/fields/Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sub_Stage__c</fullName>
    <label>Sub Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>